--- a/src/views/common/footer.pug
+++ b/src/views/common/footer.pug
@@ -1,2 +1,72 @@
 footer.footer
-    h2 Copyright &copy;
+  .footer_top
+    .container.footer_top_container
+      .footer_logo
+        a(href="#").logo
+          +image('logo.png', 'logo_img')
+          .logo_title BRAN
+            span d
+        .footer_logo_text 
+          p Objectively transition extensive data rather than cross functional solutions. Monotonectally syndicate multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array of processes and cross-unit partnerships. 
+          p Efficiently plagiarize 24/365 action items and focused infomediaries.<br/>Distinctively seize superior initiatives for wireless technologies.<br/>Dynamically optimize.
+      .footer_nav
+        ul.footer_nav_list COMPANy
+          li.footer_nav_item
+            a(href="/index.html" class="nav_link") Home
+          li.footer_nav_item
+            a(href="#" class="nav_link") Shop
+          li.footer_nav_item
+            a(href="#" class="nav_link") About
+          li.footer_nav_item
+            a(href="#" class="nav_link") How It Works
+          li.footer_nav_item
+            a(href="#" class="nav_link") Contact
+
+
+        ul.footer_nav_list INFORMATION
+          li.footer_nav_item
+            a(href="#" class="nav_link") Tearms & Condition
+          li.footer_nav_item
+            a(href="#" class="nav_link") Privacy Policy
+          li.footer_nav_item
+            a(href="#" class="nav_link") How to Buy
+          li.footer_nav_item
+            a(href="#" class="nav_link") How to Sell
+          li.footer_nav_item
+            a(href="#" class="nav_link") Promotion
+
+        ul.footer_nav_list SHOP CATEGORY
+          li.footer_nav_item
+            a(href="#" class="nav_link") Men
+          li.footer_nav_item
+            a(href="#" class="nav_link") Women
+          li.footer_nav_item
+            a(href="#" class="nav_link") Child
+          li.footer_nav_item
+            a(href="#" class="nav_link") Apparel
+          li.footer_nav_item
+            a(href="#" class="nav_link") Brows All
+
+  .footer_bottom
+    .container.footer_bottom_container
+      .copyright &copy; 2017  Brand  All Rights reserved.
+      .socials
+        a(href="https://ru-ru.facebook.com" class="socials_link" target="blank")
+          i(class="fa fa-facebook" aria-hidden="true")
+        a(href="https://twitter.com" class="socials_link" target="blank")
+          i(class="fa fa-twitter" aria-hidden="true")
+        a(href="https://ru.linkedin.com" class="socials_link" target="blank")
+          i(class="fa fa-linkedin" aria-hidden="true")
+        a(href="https://www.pinterest.com" class="socials_link" target="blank")
+          i(class="fa fa-pinterest-p" aria-hidden="true")
+        a(href="https://plus.google.com" class="socials_link" target="blank")
+          i(class="fa fa-google-plus" aria-hidden="true")
+
+
+
+
+
+
+
+
+
