--- a/src/views/common/header.pug
+++ b/src/views/common/header.pug
@@ -19,7 +19,7 @@ header.header
     nav.nav
       ul.nav_list
         li.nav_item
-          a(href="/#" class="nav_link") Home
+          a(href="/index.html" class="nav_link") Home
         li.nav_item
           a(href="/#" class="nav_link") Man
         li.nav_item
