--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -94,5 +94,5 @@ block content
         .subscribe_subtitle FOR OUR NEWLETTER AND PROMOTION
         form.subscribe_form(action="#")
           input(type="email" class="subscribe_input" name="email" placeholder="Enter Your Email")
-          button(type="submit" class="subscribe_button") Subscribe
+          button(type="submit" class="button button_subscribe") Subscribe
 
