--- a/src/views/common/footer.pug
+++ b/src/views/common/footer.pug
@@ -2,7 +2,7 @@ footer.footer
   .footer_top
     .container.footer_top_container
       .footer_logo
-        a(href="#").logo
+        a(href="/index.html").logo
           +image('logo.png', 'logo_img')
           .logo_title BRAN
             span d
@@ -12,40 +12,39 @@ footer.footer
       .footer_nav
         ul.footer_nav_list COMPANy
           li.footer_nav_item
-            a(href="/index.html" class="nav_link") Home
+            a(href="/index.html" class="footer_nav_link") Home
           li.footer_nav_item
-            a(href="#" class="nav_link") Shop
+            a(href="#" class="footer_nav_link") Shop
           li.footer_nav_item
-            a(href="#" class="nav_link") About
+            a(href="#" class="footer_nav_link") About
           li.footer_nav_item
-            a(href="#" class="nav_link") How It Works
+            a(href="#" class="footer_nav_link") How It Works
           li.footer_nav_item
-            a(href="#" class="nav_link") Contact
-
+            a(href="#" class="footer_nav_link") Contact
 
         ul.footer_nav_list INFORMATION
           li.footer_nav_item
-            a(href="#" class="nav_link") Tearms & Condition
+            a(href="#" class="footer_nav_link") Tearms & Condition
           li.footer_nav_item
-            a(href="#" class="nav_link") Privacy Policy
+            a(href="#" class="footer_nav_link") Privacy Policy
           li.footer_nav_item
-            a(href="#" class="nav_link") How to Buy
+            a(href="#" class="footer_nav_link") How to Buy
           li.footer_nav_item
-            a(href="#" class="nav_link") How to Sell
+            a(href="#" class="footer_nav_link") How to Sell
           li.footer_nav_item
-            a(href="#" class="nav_link") Promotion
+            a(href="#" class="footer_nav_link") Promotion
 
         ul.footer_nav_list SHOP CATEGORY
           li.footer_nav_item
-            a(href="#" class="nav_link") Men
+            a(href="/product.html" class="footer_nav_link") Men
           li.footer_nav_item
-            a(href="#" class="nav_link") Women
+            a(href="#" class="footer_nav_link") Women
           li.footer_nav_item
-            a(href="#" class="nav_link") Child
+            a(href="#" class="footer_nav_link") Child
           li.footer_nav_item
-            a(href="#" class="nav_link") Apparel
+            a(href="#" class="footer_nav_link") Apparel
           li.footer_nav_item
-            a(href="#" class="nav_link") Brows All
+            a(href="#" class="footer_nav_link") Brows All
 
   .footer_bottom
     .container.footer_bottom_container
