--- a/src/views/common/header.pug
+++ b/src/views/common/header.pug
@@ -1,7 +1,7 @@
 header.header
   .header_top
     .container.header_container
-      a(href="#").logo
+      a(href="/index.html").logo
         +image('logo.png', 'logo_img')
         .logo_title BRAN
           span d
@@ -21,7 +21,7 @@ header.header
         li.nav_item
           a(href="/index.html" class="nav_link") Home
         li.nav_item
-          a(href="/#" class="nav_link") Man
+          a(href="/product.html" class="nav_link") Man
         li.nav_item
           a(href="/#" class="nav_link") Women
         li.nav_item
