--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -24,7 +24,8 @@ block content
   section.slider
     .container
       .slide
-        +image('man.jpg', 'man_img')
+        //- +image('man2.jpg', 'slide_img')
+        +image('man.jpg', 'slide_img')
         .slide_text THE BRAND
           .slide_text_exp OF LUXERIOUS 
             span FASHION
