--- a/src/assets/styles/blocks/_button.scss
+++ b/src/assets/styles/blocks/_button.scss
@@ -50,6 +50,9 @@
     border: 4px solid transparent;
     border-top: 4px solid white;
   }
+  &:hover {
+    background: #f05469;
+  }
 }
 .products_items_button {
   position: absolute;
@@ -85,6 +88,9 @@
   font-size: 16px;
   padding: 18px 43px 18px 25px;
   position: relative;
+  &:hover {
+    background: #f05469;
+  }
 }
 .button_subscribe {
   font-family: inherit;
@@ -94,4 +100,7 @@
   padding: 17px 22px;
   border-top-right-radius: 23px;
   border-bottom-right-radius: 23px;
+  &:hover {
+    background: #f05469;
+  }
 }
