--- a/src/views/pages/Checkout.pug
+++ b/src/views/pages/Checkout.pug
@@ -1,7 +1,7 @@
 extends ../main.layout.pug
 
 block variables
-    - var title = 'Блог'
+    - var title = 'Checkout'
 
 block content
-    h1 "Блог"
+    
