--- a/src/assets/styles/blocks/_products.scss
+++ b/src/assets/styles/blocks/_products.scss
@@ -29,6 +29,9 @@
     .products_items_button {
       display: block;
     }
+    .button_wrap {
+      display: flex;
+    }
   }
 }
 .products_item_img {
