--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,3 +11,6 @@
 @import 'blocks/feature.scss';
 @import 'blocks/reviews.scss';
 @import 'blocks/footer.scss';
+@import 'blocks/breadcrumb.scss';
+@import 'blocks/main_content.scss';
+@import 'blocks/sidebar.scss';
