--- a/src/views/common/footer.pug
+++ b/src/views/common/footer.pug
@@ -36,7 +36,7 @@ footer.footer
 
         ul.footer_nav_list SHOP CATEGORY
           li.footer_nav_item
-            a(href="/product.html" class="footer_nav_link") Men
+            a(href="/man.html" class="footer_nav_link") Men
           li.footer_nav_item
             a(href="#" class="footer_nav_link") Women
           li.footer_nav_item
