--- a/src/views/main.layout.pug
+++ b/src/views/main.layout.pug
@@ -14,5 +14,6 @@ html(lang="en")
       include ./common/header.pug
       .maincontent
         block content
+      include ./common/reviews.pug
       include ./common/footer.pug
     block scripts
