--- a/src/views/pages/man.pug
+++ b/src/views/pages/man.pug
@@ -90,6 +90,7 @@ block content
                     label(for=`${size}` class="checkbox__label") #{size}
             .filter
               .filter_title price
+              .price_slider_wrapper
           .bottom_filter
             .sort 
               .sort_title Sort By
