--- a/src/assets/styles/layout/base.scss
+++ b/src/assets/styles/layout/base.scss
@@ -16,6 +16,8 @@ body {
   overflow: hidden;
   min-height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
@@ -28,4 +30,10 @@ a {
   display: block;
   text-decoration: none;
   color: $text-color;
+}
+.header, .reviews, .footer {
+  flex: 0;
+}
+.maincontent {
+  flex: 1;
 }
