--- a/src/views/common/header.pug
+++ b/src/views/common/header.pug
@@ -2,7 +2,7 @@
  var headerNav = [
                ['Home', 'index.html'],
                ['Man', 'man.html'],
-               ['Women', '#'],
+               ['Women', 'women.html'],
                ['Kids', '#'],
                ['Accoseriese', '#'],
                ['Featured', '#'],
