--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,3 +14,4 @@
 @import 'blocks/breadcrumb.scss';
 @import 'blocks/main_content.scss';
 @import 'blocks/sidebar.scss';
+@import 'blocks/product_slider.scss';
