--- a/src/views/pages/man.pug
+++ b/src/views/pages/man.pug
@@ -1,7 +1,7 @@
 extends ../main.layout.pug
 
 block variables
-  - var title = 'man'
+  - var title = 'Man'
   - var current = title
   -
     var category = ['Accessories',
