--- a/src/views/pages/women.pug
+++ b/src/views/pages/women.pug
@@ -1,7 +1,7 @@
 extends ../main.layout.pug
 
 block variables
-  - var title = 'women'
+  - var title = 'Women'
   - var current = title
 
 block content
@@ -14,7 +14,7 @@ block content
   section.product_slider
     .product_slider_image
       +image('products/women1.png', 'slide_img')
-    .product_slider_btn.product_slider_prev
+    buttons.product_slider_btn.product_slider_prev
       i(class="fa fa-angle-left" aria-hidden="true")
-    .product_slider_btn.product_slider_next
+    buttons.product_slider_btn.product_slider_next
       i(class="fa fa-angle-left" aria-hidden="true")
