--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,3 +15,4 @@
 @import 'blocks/main_content.scss';
 @import 'blocks/sidebar.scss';
 @import 'blocks/product_slider.scss';
+@import 'blocks/product_description.scss';
