--- a/src/views/pages/man.pug
+++ b/src/views/pages/man.pug
@@ -130,7 +130,7 @@ block content
               a(href="#" class="arrows next")
                 i(class="fa fa-chevron-right" aria-hidden="true")
 
-          button.button.pagination_button View All
+          button.button.white_button View All
 
   section.reduced_feature
     .container
