--- a/src/views/pages/women.pug
+++ b/src/views/pages/women.pug
@@ -18,3 +18,32 @@ block content
       i(class="fa fa-angle-left" aria-hidden="true")
     buttons.product_slider_btn.product_slider_next
       i(class="fa fa-angle-left" aria-hidden="true")
+
+  section.product_description
+    .container.product_description-container
+      .product_description_title WOMEN COLLECTION
+      .product_description_devider
+      .product_description_tagline Moschino Cheap And Chic
+      .product_description_specification Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate collaborative architectures before cutting-edge services. Completely visualize parallel core competencies rather than exceptional portals. 
+      .product_description_feature
+        .feature_fractions
+          .fractions_left MATERIAL:
+          .fractions_right COTTON
+        .feature_fractions
+          .fractions_left DESIGNER:
+          .fractions_right BINBURHAN
+      .product_description_price $561
+      .product_description_filters
+        .product_description_filter CHOOSE COLOR
+          select(name="chooseColor" class="product_description_select")
+            option(value="red") Red
+            option(value="black") black
+            option(value="brown") brown
+        .product_description_filter CHOOSE SIZE
+          select(name="chooseColor" class="product_description_select")
+            option(value="xxl") XXL
+            option(value="m") M
+            option(value="s") S
+        .product_description_filter QUANTITY
+          input(type="text" class="product_description_input")
+      button.product_description_button Add to Cart
