--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,3 +16,4 @@
 @import 'blocks/sidebar.scss';
 @import 'blocks/product_slider.scss';
 @import 'blocks/product_description.scss';
+@import 'blocks/recommendations.scss';
