--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,3 +17,4 @@
 @import 'blocks/product_slider.scss';
 @import 'blocks/product_description.scss';
 @import 'blocks/recommendations.scss';
+@import 'blocks/dropDown.scss';
