--- a/src/views/main.layout.pug
+++ b/src/views/main.layout.pug
@@ -16,4 +16,7 @@ html(lang="en")
         block content
       include ./common/reviews.pug
       include ./common/footer.pug
+
+    //- script(src='bootloader.bundle.js')
+    script(src='assets/scripts/vendors.bundle.js')
     block scripts
