--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -20,6 +20,9 @@ block variables
                    ['crown','Quality assurance', 'Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.'],
                    ]
 
+block scripts
+  script(src='assets/scripts/main.bundle.js')
+
 block content
   section.slider
     .container
